mask added and ops

--- a/start.ipynb
+++ b/start.ipynb
@@ -129,7 +129,7 @@
        "      <td>37.160000</td>\n",
        "      <td>36.110001</td>\n",
        "      <td>36.360001</td>\n",
-       "      <td>28.187452</td>\n",
+       "      <td>28.187454</td>\n",
        "      <td>23605600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -138,7 +138,7 @@
        "      <td>36.450001</td>\n",
        "      <td>35.939999</td>\n",
        "      <td>35.950001</td>\n",
-       "      <td>27.869602</td>\n",
+       "      <td>27.869610</td>\n",
        "      <td>32785000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -147,7 +147,7 @@
        "      <td>36.230000</td>\n",
        "      <td>35.259998</td>\n",
        "      <td>35.279999</td>\n",
-       "      <td>27.350197</td>\n",
+       "      <td>27.350189</td>\n",
        "      <td>30847600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -156,7 +156,7 @@
        "      <td>36.070000</td>\n",
        "      <td>35.270000</td>\n",
        "      <td>36.020000</td>\n",
-       "      <td>27.923870</td>\n",
+       "      <td>27.923872</td>\n",
        "      <td>27725200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -165,7 +165,7 @@
        "      <td>37.000000</td>\n",
        "      <td>36.259998</td>\n",
        "      <td>36.689999</td>\n",
-       "      <td>28.443283</td>\n",
+       "      <td>28.443274</td>\n",
        "      <td>31765400</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -175,11 +175,11 @@
       "text/plain": [
        "                 Open       High        Low      Close  Adj Close    Volume\n",
        "Date                                                                       \n",
-       "2015-01-02  36.669998  37.160000  36.110001  36.360001  28.187452  23605600\n",
-       "2015-01-05  36.200001  36.450001  35.939999  35.950001  27.869602  32785000\n",
-       "2015-01-06  36.080002  36.230000  35.259998  35.279999  27.350197  30847600\n",
-       "2015-01-07  35.639999  36.070000  35.270000  36.020000  27.923870  27725200\n",
-       "2015-01-08  36.369999  37.000000  36.259998  36.689999  28.443283  31765400"
+       "2015-01-02  36.669998  37.160000  36.110001  36.360001  28.187454  23605600\n",
+       "2015-01-05  36.200001  36.450001  35.939999  35.950001  27.869610  32785000\n",
+       "2015-01-06  36.080002  36.230000  35.259998  35.279999  27.350189  30847600\n",
+       "2015-01-07  35.639999  36.070000  35.270000  36.020000  27.923872  27725200\n",
+       "2015-01-08  36.369999  37.000000  36.259998  36.689999  28.443274  31765400"
       ]
      },
      "execution_count": 4,
@@ -259,7 +259,7 @@
        "      <td>37.160000</td>\n",
        "      <td>36.110001</td>\n",
        "      <td>36.360001</td>\n",
-       "      <td>28.187452</td>\n",
+       "      <td>28.187454</td>\n",
        "      <td>23605600</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -270,7 +270,7 @@
        "      <td>36.450001</td>\n",
        "      <td>35.939999</td>\n",
        "      <td>35.950001</td>\n",
-       "      <td>27.869602</td>\n",
+       "      <td>27.869610</td>\n",
        "      <td>32785000</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -281,7 +281,7 @@
        "      <td>36.230000</td>\n",
        "      <td>35.259998</td>\n",
        "      <td>35.279999</td>\n",
-       "      <td>27.350197</td>\n",
+       "      <td>27.350189</td>\n",
        "      <td>30847600</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -292,7 +292,7 @@
        "      <td>36.070000</td>\n",
        "      <td>35.270000</td>\n",
        "      <td>36.020000</td>\n",
-       "      <td>27.923870</td>\n",
+       "      <td>27.923872</td>\n",
        "      <td>27725200</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -303,7 +303,7 @@
        "      <td>37.000000</td>\n",
        "      <td>36.259998</td>\n",
        "      <td>36.689999</td>\n",
-       "      <td>28.443283</td>\n",
+       "      <td>28.443274</td>\n",
        "      <td>31765400</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -313,11 +313,11 @@
       ],
       "text/plain": [
        "         Date       Open       High        Low      Close  Adj Close  \\\n",
-       "0  2015-01-02  36.669998  37.160000  36.110001  36.360001  28.187452   \n",
-       "1  2015-01-05  36.200001  36.450001  35.939999  35.950001  27.869602   \n",
-       "2  2015-01-06  36.080002  36.230000  35.259998  35.279999  27.350197   \n",
-       "3  2015-01-07  35.639999  36.070000  35.270000  36.020000  27.923870   \n",
-       "4  2015-01-08  36.369999  37.000000  36.259998  36.689999  28.443283   \n",
+       "0  2015-01-02  36.669998  37.160000  36.110001  36.360001  28.187454   \n",
+       "1  2015-01-05  36.200001  36.450001  35.939999  35.950001  27.869610   \n",
+       "2  2015-01-06  36.080002  36.230000  35.259998  35.279999  27.350189   \n",
+       "3  2015-01-07  35.639999  36.070000  35.270000  36.020000  27.923872   \n",
+       "4  2015-01-08  36.369999  37.000000  36.259998  36.689999  28.443274   \n",
        "\n",
        "     Volume  moving_average  \n",
        "0  23605600             NaN  \n",
@@ -403,7 +403,7 @@
    ],
    "source": [
     "# Parameters\n",
-    "T = 20 \n",
+    "T = 5\n",
     "price_list_size = 1\n",
     "sync_period=30\n",
     "lr = 1e-6 # 0.001\n",
@@ -519,7 +519,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37d2abb17d1649ffbad01da867041be2",
+       "model_id": "64628afb6eae46eaa2393d2f76e412bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -534,192 +534,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ep 1, reward: 309.31, % of random = 0.81, lr = 1.00e-06\n",
-      "Ep 2, reward: 258.78, % of random = 0.74, lr = 9.70e-07\n",
-      "Ep 3, reward: 378.10, % of random = 0.68, lr = 9.41e-07\n",
-      "Ep 4, reward: 354.47, % of random = 0.60, lr = 9.13e-07\n",
-      "Ep 5, reward: 329.10, % of random = 0.54, lr = 8.85e-07\n",
-      "Ep 6, reward: 278.56, % of random = 0.48, lr = 8.59e-07\n",
-      "Ep 7, reward: 277.62, % of random = 0.42, lr = 8.33e-07\n",
-      "Ep 8, reward: 255.17, % of random = 0.40, lr = 8.08e-07\n",
-      "Ep 9, reward: 411.22, % of random = 0.35, lr = 7.84e-07\n",
-      "Ep 10, reward: 286.20, % of random = 0.30, lr = 7.60e-07\n",
-      "Ep 11, reward: 408.65, % of random = 0.29, lr = 7.37e-07\n",
-      "Ep 12, reward: 366.39, % of random = 0.26, lr = 7.15e-07\n",
-      "Ep 13, reward: 373.88, % of random = 0.22, lr = 6.94e-07\n",
-      "Ep 14, reward: 323.83, % of random = 0.21, lr = 6.73e-07\n",
-      "Ep 15, reward: 370.12, % of random = 0.20, lr = 6.53e-07\n",
-      "Ep 16, reward: 348.41, % of random = 0.16, lr = 6.33e-07\n",
-      "Ep 17, reward: 312.54, % of random = 0.14, lr = 6.14e-07\n",
-      "Ep 18, reward: 235.44, % of random = 0.14, lr = 5.96e-07\n",
-      "Ep 19, reward: 246.83, % of random = 0.12, lr = 5.78e-07\n",
-      "Ep 20, reward: 252.03, % of random = 0.12, lr = 5.61e-07\n",
-      "Saving model at episode 20\n",
-      "Ep 21, reward: 247.79, % of random = 0.10, lr = 5.44e-07\n",
-      "Ep 22, reward: 320.43, % of random = 0.09, lr = 5.27e-07\n",
-      "Ep 23, reward: 244.28, % of random = 0.08, lr = 5.12e-07\n",
-      "Ep 24, reward: 225.18, % of random = 0.07, lr = 4.96e-07\n",
-      "Ep 25, reward: 302.82, % of random = 0.07, lr = 4.81e-07\n",
-      "Ep 26, reward: 240.05, % of random = 0.05, lr = 4.67e-07\n",
-      "Ep 27, reward: 265.75, % of random = 0.06, lr = 4.53e-07\n",
-      "Ep 28, reward: 156.85, % of random = 0.04, lr = 4.39e-07\n",
-      "Ep 29, reward: 184.09, % of random = 0.03, lr = 4.26e-07\n",
-      "Ep 30, reward: 171.59, % of random = 0.04, lr = 4.13e-07\n",
-      "Ep 31, reward: 230.53, % of random = 0.04, lr = 4.01e-07\n",
-      "Ep 32, reward: 136.66, % of random = 0.03, lr = 3.89e-07\n",
-      "Ep 33, reward: 80.85, % of random = 0.02, lr = 3.77e-07\n",
-      "Ep 34, reward: 92.40, % of random = 0.02, lr = 3.66e-07\n",
-      "Ep 35, reward: 107.06, % of random = 0.02, lr = 3.55e-07\n",
-      "Ep 36, reward: 84.62, % of random = 0.02, lr = 3.44e-07\n",
-      "Ep 37, reward: 82.53, % of random = 0.02, lr = 3.34e-07\n",
-      "Ep 38, reward: 117.08, % of random = 0.02, lr = 3.24e-07\n",
-      "Ep 39, reward: 71.17, % of random = 0.01, lr = 3.14e-07\n",
-      "Ep 40, reward: 133.78, % of random = 0.02, lr = 3.05e-07\n",
-      "Saving model at episode 40\n",
-      "Ep 41, reward: 109.26, % of random = 0.01, lr = 2.96e-07\n",
-      "Ep 42, reward: 59.63, % of random = 0.01, lr = 2.87e-07\n",
-      "Ep 43, reward: 19.73, % of random = 0.01, lr = 2.78e-07\n",
-      "Ep 44, reward: -8.41, % of random = 0.01, lr = 2.70e-07\n",
-      "Ep 45, reward: 15.09, % of random = 0.01, lr = 2.62e-07\n",
-      "Ep 46, reward: 45.63, % of random = 0.01, lr = 2.54e-07\n",
-      "Ep 47, reward: 135.60, % of random = 0.01, lr = 2.46e-07\n",
-      "Ep 48, reward: 2.75, % of random = 0.01, lr = 2.39e-07\n",
-      "Ep 49, reward: 134.07, % of random = 0.01, lr = 2.32e-07\n",
-      "Ep 50, reward: 11.30, % of random = 0.01, lr = 2.25e-07\n",
-      "Ep 51, reward: 106.55, % of random = 0.01, lr = 2.18e-07\n",
-      "Ep 52, reward: 57.58, % of random = 0.01, lr = 2.12e-07\n",
-      "Ep 53, reward: 21.48, % of random = 0.01, lr = 2.05e-07\n",
-      "Ep 54, reward: -18.69, % of random = 0.01, lr = 1.99e-07\n",
-      "Ep 55, reward: 24.60, % of random = 0.01, lr = 1.93e-07\n",
-      "Ep 56, reward: 61.57, % of random = 0.01, lr = 1.87e-07\n",
-      "Ep 57, reward: 36.38, % of random = 0.01, lr = 1.82e-07\n",
-      "Ep 58, reward: 62.45, % of random = 0.01, lr = 1.76e-07\n",
-      "Ep 59, reward: 69.45, % of random = 0.01, lr = 1.71e-07\n",
-      "Ep 60, reward: 117.68, % of random = 0.01, lr = 1.66e-07\n",
-      "Saving model at episode 60\n",
-      "Ep 61, reward: 17.84, % of random = 0.01, lr = 1.61e-07\n",
-      "Ep 62, reward: 31.81, % of random = 0.01, lr = 1.56e-07\n",
-      "Ep 63, reward: 112.95, % of random = 0.01, lr = 1.51e-07\n",
-      "Ep 64, reward: 70.54, % of random = 0.01, lr = 1.47e-07\n",
-      "Ep 65, reward: 88.05, % of random = 0.01, lr = 1.42e-07\n",
-      "Ep 66, reward: 64.07, % of random = 0.01, lr = 1.38e-07\n",
-      "Ep 67, reward: 55.45, % of random = 0.01, lr = 1.34e-07\n",
-      "Ep 68, reward: 83.36, % of random = 0.01, lr = 1.30e-07\n",
-      "Ep 69, reward: 14.65, % of random = 0.01, lr = 1.26e-07\n",
-      "Ep 70, reward: 57.14, % of random = 0.01, lr = 1.22e-07\n",
-      "Ep 71, reward: 118.13, % of random = 0.01, lr = 1.19e-07\n",
-      "Ep 72, reward: 83.62, % of random = 0.01, lr = 1.15e-07\n",
-      "Ep 73, reward: 33.36, % of random = 0.01, lr = 1.12e-07\n",
-      "Ep 74, reward: 20.37, % of random = 0.01, lr = 1.08e-07\n",
-      "Ep 75, reward: 5.81, % of random = 0.01, lr = 1.05e-07\n",
-      "Ep 76, reward: 77.44, % of random = 0.01, lr = 1.02e-07\n",
-      "Ep 77, reward: 3.55, % of random = 0.01, lr = 9.88e-08\n",
-      "Ep 78, reward: 35.68, % of random = 0.01, lr = 9.58e-08\n",
-      "Ep 79, reward: 174.04, % of random = 0.01, lr = 9.29e-08\n",
-      "Ep 80, reward: 49.72, % of random = 0.01, lr = 9.02e-08\n",
-      "Saving model at episode 80\n",
-      "Ep 81, reward: 30.98, % of random = 0.01, lr = 8.74e-08\n",
-      "Ep 82, reward: 64.01, % of random = 0.01, lr = 8.48e-08\n",
-      "Ep 83, reward: 48.02, % of random = 0.01, lr = 8.23e-08\n",
-      "Ep 84, reward: 22.91, % of random = 0.01, lr = 7.98e-08\n",
-      "Ep 85, reward: 40.03, % of random = 0.01, lr = 7.74e-08\n",
-      "Ep 86, reward: 53.30, % of random = 0.01, lr = 7.51e-08\n",
-      "Ep 87, reward: 140.48, % of random = 0.01, lr = 7.28e-08\n",
-      "Ep 88, reward: 35.79, % of random = 0.01, lr = 7.07e-08\n",
-      "Ep 89, reward: 47.09, % of random = 0.01, lr = 6.85e-08\n",
-      "Ep 90, reward: 70.34, % of random = 0.01, lr = 6.65e-08\n",
-      "Ep 91, reward: 66.45, % of random = 0.01, lr = 6.45e-08\n",
-      "Ep 92, reward: 34.08, % of random = 0.01, lr = 6.26e-08\n",
-      "Ep 93, reward: 103.22, % of random = 0.01, lr = 6.07e-08\n",
-      "Ep 94, reward: 49.41, % of random = 0.01, lr = 5.89e-08\n",
-      "Ep 95, reward: 26.77, % of random = 0.01, lr = 5.71e-08\n",
-      "Ep 96, reward: 102.29, % of random = 0.01, lr = 5.54e-08\n",
-      "Ep 97, reward: 29.77, % of random = 0.01, lr = 5.37e-08\n",
-      "Ep 98, reward: 67.98, % of random = 0.02, lr = 5.21e-08\n",
-      "Ep 99, reward: 37.75, % of random = 0.01, lr = 5.05e-08\n",
-      "Ep 100, reward: -4.87, % of random = 0.01, lr = 4.90e-08\n",
-      "Saving model at episode 100\n",
-      "Ep 101, reward: 83.00, % of random = 0.01, lr = 4.76e-08\n",
-      "Ep 102, reward: 119.68, % of random = 0.01, lr = 4.61e-08\n",
-      "Ep 103, reward: 60.83, % of random = 0.01, lr = 4.47e-08\n",
-      "Ep 104, reward: 72.70, % of random = 0.01, lr = 4.34e-08\n",
-      "Ep 105, reward: 27.20, % of random = 0.01, lr = 4.21e-08\n",
-      "Ep 106, reward: 113.88, % of random = 0.01, lr = 4.08e-08\n",
-      "Ep 107, reward: 104.18, % of random = 0.01, lr = 3.96e-08\n",
-      "Ep 108, reward: 1.91, % of random = 0.01, lr = 3.84e-08\n",
-      "Ep 109, reward: 96.74, % of random = 0.01, lr = 3.73e-08\n",
-      "Ep 110, reward: 49.32, % of random = 0.01, lr = 3.62e-08\n",
-      "Ep 111, reward: 31.70, % of random = 0.01, lr = 3.51e-08\n",
-      "Ep 112, reward: 90.47, % of random = 0.01, lr = 3.40e-08\n",
-      "Ep 113, reward: 24.91, % of random = 0.01, lr = 3.30e-08\n",
-      "Ep 114, reward: 65.63, % of random = 0.01, lr = 3.20e-08\n",
-      "Ep 115, reward: 49.67, % of random = 0.01, lr = 3.10e-08\n",
-      "Ep 116, reward: 106.13, % of random = 0.01, lr = 3.01e-08\n",
-      "Ep 117, reward: 12.96, % of random = 0.01, lr = 2.92e-08\n",
-      "Ep 118, reward: 109.47, % of random = 0.01, lr = 2.83e-08\n",
-      "Ep 119, reward: 74.09, % of random = 0.01, lr = 2.75e-08\n",
-      "Ep 120, reward: 110.80, % of random = 0.01, lr = 2.67e-08\n",
-      "Saving model at episode 120\n",
-      "Ep 121, reward: 50.48, % of random = 0.01, lr = 2.59e-08\n",
-      "Ep 122, reward: 80.03, % of random = 0.01, lr = 2.51e-08\n",
-      "Ep 123, reward: 9.21, % of random = 0.01, lr = 2.43e-08\n",
-      "Ep 124, reward: 75.08, % of random = 0.01, lr = 2.36e-08\n",
-      "Ep 125, reward: 19.42, % of random = 0.01, lr = 2.29e-08\n",
-      "Ep 126, reward: 57.20, % of random = 0.01, lr = 2.22e-08\n",
-      "Ep 127, reward: 68.78, % of random = 0.01, lr = 2.15e-08\n",
-      "Ep 128, reward: 48.59, % of random = 0.01, lr = 2.09e-08\n",
-      "Ep 129, reward: 69.47, % of random = 0.01, lr = 2.03e-08\n",
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/IPython/core/interactiveshell.py\", line 3550, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/tmp/ipykernel_1240729/2432317798.py\", line 1, in <module>\n",
-      "    episode_reward_list = agent.train(num_episodes, gamma, batch_size)\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/INF581/RL4Trading/utils/agent.py\", line 94, in train\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/torch/_tensor.py\", line 522, in backward\n",
-      "    torch.autograd.backward(\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/torch/autograd/__init__.py\", line 266, in backward\n",
-      "    Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/IPython/core/interactiveshell.py\", line 2144, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 1435, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 1326, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 1173, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 1088, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(record))\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 970, in format_record\n",
-      "    frame_info.lines, Colors, self.has_colors, lvals\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 792, in lines\n",
-      "    return self._sd.lines\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/stack_data/core.py\", line 734, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/stack_data/core.py\", line 681, in included_pieces\n",
-      "    pos = scope_pieces.index(self.executing_piece)\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/stack_data/core.py\", line 660, in executing_piece\n",
-      "    return only(\n",
-      "  File \"/users/eleves-b/2021/mathias.grau/.local/lib/python3.9/site-packages/executing/executing.py\", line 116, in only\n",
-      "    raise NotOneValueFound('Expected one value, found 0')\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+      "Ep 1, reward: 151.37, % of random = 0.80, lr = 1.00e-06\n"
      ]
     }
    ],
@@ -2797,7 +2612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
