--- a/start.ipynb
+++ b/start.ipynb
@@ -529,7 +529,26 @@
       "Ep 1, reward: -81.56, % of random = 0.82, lr = 1.00e-06, % sell= 0.44, % hold= 0.29, % buy= 0.27\n",
       "Ep 2, reward: 321.87, % of random = 0.74, lr = 9.50e-07, % sell= 0.39, % hold= 0.37, % buy= 0.24\n",
       "Ep 3, reward: 256.76, % of random = 0.67, lr = 9.02e-07, % sell= 0.52, % hold= 0.27, % buy= 0.22\n",
-      "Ep 4, reward: 220.95, % of random = 0.61, lr = 8.57e-07, % sell= 0.61, % hold= 0.20, % buy= 0.20\n"
+      "Ep 4, reward: 220.95, % of random = 0.61, lr = 8.57e-07, % sell= 0.61, % hold= 0.20, % buy= 0.20\n",
+      "Ep 5, reward: 0.83, % of random = 0.55, lr = 8.15e-07, % sell= 0.64, % hold= 0.18, % buy= 0.18\n",
+      "Ep 6, reward: 95.67, % of random = 0.48, lr = 7.74e-07, % sell= 0.68, % hold= 0.16, % buy= 0.16\n",
+      "Ep 7, reward: -3.84, % of random = 0.43, lr = 7.35e-07, % sell= 0.70, % hold= 0.15, % buy= 0.15\n",
+      "Ep 8, reward: 91.65, % of random = 0.39, lr = 6.98e-07, % sell= 0.74, % hold= 0.14, % buy= 0.12\n",
+      "Ep 9, reward: -46.75, % of random = 0.36, lr = 6.63e-07, % sell= 0.77, % hold= 0.12, % buy= 0.11\n",
+      "Ep 10, reward: 105.24, % of random = 0.33, lr = 6.30e-07, % sell= 0.78, % hold= 0.11, % buy= 0.11\n",
+      "Ep 11, reward: -20.54, % of random = 0.28, lr = 5.99e-07, % sell= 0.81, % hold= 0.10, % buy= 0.09\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m episode_reward_list \u001b[38;5;241m=\u001b[39m \u001b[43magent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_episodes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgamma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/INF581/RL4Trading/utils/agent.py:104\u001b[0m, in \u001b[0;36mAgent.train\u001b[0;34m(self, num_episodes, gamma, batch_size)\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[38;5;66;03m# reshape from (21,1,128) to (128,1,21)\u001b[39;00m\n\u001b[1;32m    103\u001b[0m account_balances_tensor \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(account_balances, dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32, device\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mdevice)\n\u001b[0;32m--> 104\u001b[0m shares_held_tensor \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mshares_held\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat32\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    106\u001b[0m next_normalized_close_prices , next_account_balances, next_shares_held \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;241m*\u001b[39mbatch_next_states)\n\u001b[1;32m    107\u001b[0m next_normalized_close_prices \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(next_normalized_close_prices)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
