--- a/start.ipynb
+++ b/start.ipynb
@@ -456,7 +456,7 @@
     }
    ],
    "source": [
-    "MODEL = \"DDDQN\"\n",
+    "MODEL = \"DQN\"\n",
     "\n",
     "# initializing a model and a target model\n",
     "print(\"Creating Models ...\")\n",
